--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,8 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+# Post link is /2018/01/01/title.html
+permalink: date
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
